# dsync

./: Cargo.toml  build.rs  drive.json
src/: auth.rs  cli.rs  gdrive.rs  main.rs  repo.rs  serde_format.rs
