[package]
name = "dsync"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
dotenvy = "0.15.7"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
anyhow = "1.0.81"

serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.115", features = ["indexmap"] }
serde_urlencoded = "0.7.1"

chrono = { version = "0.4.37", features = ["serde"] }
indexmap = { version = "2.2.6", features = ["serde"] }
dashmap = "5.5.3"

hex = "0.4.3"
sha2 = "0.10.8"


dirs = "5.0.1"
open = "5.1.2"
oauth2 = "5.0.0-alpha.3"

hyper = { version = "1.2.0", features = ["http1", "http2", "server"] }
hyper-util = "0.1.3"

tokio = { version = "1.36.0", default-features = false, features = ["macros", "rt-multi-thread", "tracing"] }
reqwest = { version = "0.12.2", default-features = false, features = ["gzip", "json", "multipart", "stream", "rustls-tls", "http2"] }

futures = { version = "0.3.30" }





tracing = "0.1.40"
tracing-subscriber = "0.3.18"
